# botloc-manager

./: .gitignore  Cargo.toml  flake.nix
src/: main.rs  oauth2.rs
src/utils/: mod.rs
