[package]
name = "botloc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "macros"] }
axum-extra = { version = "0.9.3", features = ["cookie-private"] }
base64 = "0.22.1"
oauth2 = "5.0.0-alpha"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
